--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <!-- normal html -->
-    <div id="root"></div>
+    <div id="root">
+      <h1>Not Rendered</h1>
+    </div>
     <!-- js way of code -->
     <!-- <script>
       const heading = document.createElement("h1");
